# MCP-Servers-STDIO

./: README.md  pyproject.toml
src/mcpservers/: __main__.py  deployment.py
